# git-control-tower

./: .gitignore  AGENT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  claude.yml  create-release-pr.yml  release.yml
plugins/gct/.claude-plugin/: plugin.json
plugins/gct/skills/using-gct/: SKILL.md
scripts/demo/: gh-stub  setup.sh
scripts/demo/fixtures/gh/: local-prs-f1.json  local-prs-f2.json  local-prs-f3.json  local-prs-hero.json  pr-list-f1-author-me-merged.json  pr-list-f1-author-me-open.json  pr-list-f2-author-me-open.json  pr-list-hero-search-review-requested-open.json  pr-view-130.json  pr-view-138.json  pr-view-142.json  viewer-login.txt
scripts/demo/tapes/: f1-cleanup.tape  f2-search.tape  f3-hooks.tape  f4-cross-repo.tape  hero.tape
src/: app.rs  config.rs  data.rs  event.rs  main.rs  mcp.rs  ops.rs
src/app/: command.rs  cross_repo.rs  mod.rs  overlays.rs  progress.rs  prs.rs  raw.rs  view.rs
src/git/: command.rs  mod.rs  parser.rs  types.rs
src/ui/: branch_create_input.rs  branch_view.rs  confirm_dialog.rs  detail_pane.rs  help_overlay.rs  history_view.rs  layout.rs  log_view.rs  main_view.rs  markdown.rs  mod.rs  notification.rs  pr_detail.rs  pr_view.rs  progress_panel.rs  sidebar.rs  theme.rs  worktree_view.rs
tests/: cli_integration.rs  mcp_integration.rs  tui_e2e.rs
