[package]
name = "git-control-tower"
version = "0.0.15"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A terminal UI tool for overseeing Git/GitHub workflows"
repository = "https://github.com/katzkb/git-control-tower"
keywords = ["git", "github", "tui", "terminal", "worktree"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gct"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
