[package]
name = "git-control-tower"
version = "0.0.47"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A terminal UI tool for overseeing Git/GitHub workflows"
repository = "https://github.com/katzkb/git-control-tower"
keywords = ["git", "github", "tui", "terminal", "worktree"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gct"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
base64 = "0.22.1"
shellexpand = "3"

[dev-dependencies]
tempfile = "3.27.0"
portable-pty = "0.9"
vt100 = "0.15"
